WIP: Changed name of project and docker image name.

--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.testautomationguru.container</groupId>
-	<artifactId>container-test</artifactId>
+	<groupId>com.tyeth.dockerseleniumtest</groupId>
+	<artifactId>docker-selenium-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 
@@ -19,7 +19,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-	    <finalName>container-test</finalName>
+	    <finalName>docker-selenium-test</finalName>
 	    <sourceDirectory>src</sourceDirectory>
 		<plugins>
             <plugin>
@@ -81,7 +81,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>vinsdocker/containertest</repository>
+					<repository>tyeth/docker-selenium-test</repository>
 					<tag>demo</tag>
 				</configuration>
 			</plugin>
