--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
-version: "3"
+version: "3.4"
 services:
   selenium-hub:
     image: selenium/hub
     container_name: selenium-hub
     ports:
       - "4444:4444"
+    healthcheck:
+      test: curl --fail -s http://localhost:4444/ || exit 1
+      interval: 1m30s
+      timeout: 10s
+      start_period: 15s
+      retries: 3
   chrome:
     image: selenium/node-chrome
     depends_on:
@@ -12,6 +18,12 @@ services:
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
+    healthcheck:
+      test: curl --fail -s http://localhost:5555/ || exit 1
+      interval: 1m30s
+      timeout: 10s
+      start_period: 15s
+      retries: 3
   firefox:
     image: selenium/node-firefox
     depends_on:
@@ -19,6 +31,12 @@ services:
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
+    healthcheck:
+      test: curl --fail -s http://localhost:5555/ || exit 1
+      interval: 1m30s
+      timeout: 10s
+      start_period: 15s
+      retries: 3
   search-module:
     image: vinsdocker/containertest:demo
     container_name: search-module
