--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
     healthcheck:
-      test: curl --fail -s http://localhost:5555/ || exit 1
+      test: curl --fail -s http://selenium-hub:4444/grid/console | grep chrome || exit 1
       interval: 1m30s
       timeout: 10s
       start_period: 15s
@@ -32,7 +32,7 @@ services:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
     healthcheck:
-      test: curl --fail -s http://localhost:5555/ || exit 1
+      test: curl --fail -s http://selenium-hub:4444/grid/console | grep firefox || exit 1
       interval: 1m30s
       timeout: 10s
       start_period: 15s
