--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,10 @@
 	<groupId>com.tyeth.dockerseleniumtest</groupId>
 	<artifactId>docker-selenium-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
