--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: selenium-hub
     ports:
       - "4444:4444"
+    environment:
+      - GRID_MAX_SESSION=10
     healthcheck:
       test: curl --fail -s http://localhost:4444/ || exit 1
       interval: 1m30s
@@ -18,6 +20,8 @@ services:
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
+      - NODE_MAX_INSTANCES=6
+      - NODE_MAX_SESSION=3
     healthcheck:
       test: curl --fail -s http://selenium-hub:4444/grid/console | grep chrome || exit 1
       interval: 1m30s
