Updated instances of firefox

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
+      - NODE_MAX_INSTANCES=6
+      - NODE_MAX_SESSION=3
     healthcheck:
       test: curl --fail -s http://selenium-hub:4444/grid/console | grep firefox || exit 1
       interval: 1m30s
