--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,15 @@ services:
     image: selenium/node-chrome
     depends_on:
       - selenium-hub
+    ports:
+      - "5551:5555"
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
       - NODE_MAX_INSTANCES=6
       - NODE_MAX_SESSION=3
     healthcheck:
-      test: curl --fail -s http://selenium-hub:4444/grid/console | grep chrome || exit 1
+      test: curl --fail -s http://localhost:5555/wd/hub/static/resource/hub.html | grep No Sessions || exit 1
       interval: 1m30s
       timeout: 10s
       start_period: 15s
@@ -32,13 +34,15 @@ services:
     image: selenium/node-firefox
     depends_on:
       - selenium-hub
+    ports:
+      - "5552:5555"
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
       - NODE_MAX_INSTANCES=6
       - NODE_MAX_SESSION=3
     healthcheck:
-      test: curl --fail -s http://selenium-hub:4444/grid/console | grep firefox || exit 1
+      test: curl --fail -s http://localhost:5555/wd/hub/static/resource/hub.html | grep No Sessions || exit 1
       interval: 1m30s
       timeout: 10s
       start_period: 15s
